--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -2,6 +2,7 @@
 .step {
   display: block;
   padding: 150px 0;
+  width: 100%;
 }
 .step .container {
   display: block;
@@ -127,4 +128,71 @@
   border: 1px solid #333;
   margin-left: 10px;
   padding: 10px 5px;
+}
+
+.step .container .step_body .worker_list {
+  display: flex;
+  align-items: center;
+  justify-content: normal;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.step .container .step_body .worker_list li {
+  display: block;
+  width: 10%;
+  font-size: 16px;
+}
+.step .container .step_body .worker_list li input {
+}
+.step .container .step_body .worker_list li input + label {
+  display: block;
+  width: 100%;
+  padding: 5px;
+  box-sizing: border-box;
+  border: 1px solid #333;
+  border-radius: 5px;
+  cursor: pointer;
+  text-align: center;
+}
+.step .container .step_body .worker_list li input:checked + label {
+  background: #333;
+  color: #fff;
+}
+
+.step .step_body .step3_title {
+  display: block;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.step .step_body .done_btn {
+  display: block;
+  width: 50%;
+  margin: 0 auto;
+  padding: 15px 10px;
+  box-sizing: border-box;
+  margin-top: 15px;
+  background: #333;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 10px;
+}
+
+.step table {
+  width: 100%;
+}
+.step table th {
+  padding: 10px 0;
+  font-size: 16px;
+  font-weight: bold;
+  background: #333;
+  color: #fff;
+  text-align: center;
+}
+.step table td {
+  padding: 10px 0;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  text-align: center;
 }
