--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -11,6 +11,15 @@
   padding: 0px 15px;
   box-sizing: border-box;
   margin: 0 auto;
+  position: relative;
+}
+.container .home_btn {
+  position: absolute;
+  top: 5%;
+  left: 10%;
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
 }
 
 .step .container .step_body {
